Refactored to have buttons provide user choice

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
   <head>
     <title>The Rock Paper Scissors Project</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
+    <div class="buttonList">
+      <button id="rock" class="button">Rock</button>
+      <button id="paper" class="button">Paper</button>
+      <button id="scissors" class="button">Scissors</button>
+    </div>
+    <div class="displayResults"></div>
     <script src="myscript.js"></script>
   </body>
 </html>
